samples/_failures_safe/1761795484_415ead_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fdb1222b.c: In function ‘main’:
./samples/SAFE/__tmp_fdb1222b.c:137:9: error: expected declaration or statement at end of input
  137 |         entries[entry_count].message[sizeof(entries[entry_count].message) - 1] = '\0';
      |         ^~~~~~~
./samples/SAFE/__tmp_fdb1222b.c:137:9: error: expected declaration or statement at end of input
